haproxy/multipath-different-namespace-sidecar-fluentbit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mario-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: tetris-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
  namespace: mario-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: pengbai/docker-supermario
---
apiVersion: v1
kind: Service
metadata:
  name: mario
  namespace: mario-ns
spec:
  selector:
    app: mario
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  namespace: tetris-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: tetris
          image: bsord/tetris
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
  namespace: tetris-ns
spec:
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: haproxy-ns
spec:
  replicas: 2  # Update the replica count to 2
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/etc/haproxy/haproxy.cfg
          subPath: haproxy.cfg
        - name: shared-data
          mountPath: /var/log/haproxy # Update to a more appropriate path for HAProxy logs
      - name: fluent-bit
        image: fluent/fluent-bit:2.2.2
        imagePullPolicy: Always
        volumeMounts:
        - name: shared-data
          mountPath: /var/log/haproxy # Ensure Fluent Bit reads from the correct path
        - name: fluent-bit-config
          mountPath: /fluent-bit/etc/
      volumes:
      - name: config-volume
        configMap:
          name: haproxy-config
      - name: shared-data
        emptyDir: {} # Temporary directory for sharing logs
      - name: fluent-bit-config
        configMap:
          name: fluent-bit-config # ConfigMap storing Fluent Bit configuration
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: haproxy-ns
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "haproxy-backend-config"}'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: haproxy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: haproxy-ns
  name: ingress-games
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "mgmt-gke-game-lb-ip"
    networking.gke.io/v1beta1.FrontendConfig: "games-frontend-config"
    networking.gke.io/managed-certificates: "games-managed-certificate"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: game.somaz.link
    http:
      paths:
      - path: /mario
        pathType: Prefix
        backend:
          service:
            name: haproxy 
            port:
              number: 80
      - path: /tetris
        pathType: Prefix
        backend:
          service:
            name: haproxy  
            port:
              number: 80
